<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ObliqueShockLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ObliqueShock">

    <Spinner
        android:id="@+id/selector_osr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:entries="@array/osr_entries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selector_osr">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_m_u2081"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gamma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gamma"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/m_u2081"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="125dp"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/m_u2082"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/p_u2080_u2082_p_u2080_u2081"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/p02_p01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/turn_angle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/turnangle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/p_u2082_p_u2081"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/p2_p1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/u03c1_u2082_u03c1_u2081"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/rho2_rho1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/t_u2082_t_u2081"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/t2_t1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/wave_angle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/waveang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/m_u2081_u2099"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m1n"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/m_u2082_u2099"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m2n"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />


        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout3" />


</androidx.constraintlayout.widget.ConstraintLayout>