<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/isentropicLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:entries="@array/isentropic_entries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selector">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gamma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gamma"
                    android:inputType="numberDecimal"
                    android:paddingBottom="10dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/mach_number"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="125dp"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/p_p_u2080"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/p_p0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/t_t_u2080"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/t_t0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/u03c1_u03c1_u2080"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/rho_rho0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/p_p_u002a"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pstar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/t_t_u002a"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tstar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/u03c1_u03c1_u002a"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/rhostar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/a_a_u002a"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/astar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/p_m_angle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pmangle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/mach_angle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mangle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>